# libsrf

./: CMakeLists.txt
include/: cstring.h  encoding.h  libsrf.h  plugin.h  properties.h  settings.h  util.h
include/formats/: aifc.h  binary.h  bmp.h  image.h  img.h  json.h  qhdr.h  sound.h  strings.h
src/: cstring.c  encoding.c  libsrf.c  plugin.c  properties.c  settings.c  util.c
src/formats/: aifc.c  binary.c  bmp.c  image.c  img.c  json.c  libattopng.c  qhdr.c  sound.c  strings.c
